--- a/ProdKeysManager/ProdKeysManager.csproj
+++ b/ProdKeysManager/ProdKeysManager.csproj
@@ -201,6 +201,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SensitiveTextConverter.cs" />
     <Page Include="AddKeyDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
