--- a/ProdKeysManager/Properties/Settings.settings
+++ b/ProdKeysManager/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="ProdKeys" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="EnableSensitiveMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
